# hgvs-installation-test

./: .gitignore  .travis.yml  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
tests/: conftest.py  test_hgvs.py
