[metadata]
author = Reece Hart
author-email = biocommons-dev@googlegroups.com
description = Verifies installability of the hgvs package
home-page = https://github.com/biocommons/hgvs-installation-test
description-content-type = text/x-rst; charset=UTF-8
description-file = README.rst
platform = any

[options]
install_requires =
    hgvs
setup_requires =
    pytest-runner
tests_require =
    pytest
    pytest-cov

[aliases]
test = pytest
