[metadata]
name = pkg
author = Reece Hart
author-email = biocommons-dev@googlegroups.com
description = Verifies ability to install hgvs with pip
home-page = https://github.com/biocommons/hgvs-installation-test
description-content-type = text/x-rst; charset=UTF-8
description-file = README.rst
platform = any

[options]
packages = pkg
zip_safe = true
package_dir =
    = src
install_requires =
    hgvs
setup_requires =
    pytest-runner
tests_require =
    pytest
